<resources>
    <string name="app_name">Dried_shrimp</string>
    <string name="登入">登入</string>
    <string name="註冊">註冊</string>
    <string name="payment">待付款</string>
    <string name="pending_shipment">待出貨</string>
    <string name="receiving">待收貨</string>
    <string name="evaluate">評價</string>
    <string name="電子票券與繳費">電子票券與繳費</string>
    <string name="information">雙11滿千現折$300</string>
    <string name="ticket">神券馬上領</string>
    <string name="free_delivery">商城優選免運</string>
    <string name="percent_30">全站最高7折</string>
    <string name="percent_50">打到你骨折</string>
    <string name="My_wallet">我的錢包</string>
    <string name="coin">我的蝦幣</string>
    <string name="ticket2">我的優惠券</string>
    <string name="wallet">我的蝦皮錢包</string>
    <string name="More_services">更多服務</string>
    <string name="SeeAll">查看全部></string>
    <string name="Service_and_Support">服務與支援</string>
    <string name="Buy_and_return">放心買 安心退</string>
    <string name="Help_Center">幫助中心</string>
    <string name="customer">與客服即時交談</string>
    <string name="call_customer">透過免費網路電話聯繫客服</string>
    <string name="default_web_client_id"></string>
    <string name="facebook_app_id">862044436364676</string>
    <string name="facebook_client_token">dfc52bf1f41edbc28af4a6153f96b572</string>
    <string name="google_login">使用Google帳號登入</string>
    <string name="fb_login">使用Facebook帳號登入</string>
    <string name="line_login">使用LINE帳號登入</string>
    <string name="google_register">使用Google帳號註冊</string>
    <string name="fb_register">使用Facebook帳號註冊</string>
    <string name="line_register">使用LINE帳號註冊</string>
    <string name="shopping_completed">已完成</string>
    <string name="password">密碼</string>
    <string name="Password_Confirmation">密碼確認</string>
    <string name="account_setting">帳號設定</string>
    <string name="setting">設定</string>
    <string name="Language">Language/語言</string>
    <string name="chinese">繁體中文</string>
    <string name="myhelper">我的小幫手</string>
    <string name="help_center">幫助中心</string>
    <string name="specification">皮蝦規範</string>
    <string name="Usage_Rules">皮蝦購物使用規則</string>
    <string name="like_shrimp">喜歡皮蝦?快去評價</string>
    <string name="about">關於</string>
    <string name="fb_login_protocol_scheme">fb你的AppID</string>
    <string name="shopping_cart">購物車</string>
    <string name="My_store">我的賣場</string>
    <string name="My_sales">我的銷售</string>
    <string name="mystore_visitsales">查看銷售紀錄 ></string>
    <string name="Not_valid">不成立</string>
    <string name="Returns_and_Refunds">退貨/退款</string>
    <string name="add_products">新增商品</string>
    <string name="completed_order_total">已完成訂單總計：</string>
    <string name="default_price">$0</string>

</resources>