<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_login_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/My_sales"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <TextView
            android:id="@+id/mystore_visitsales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/mystore_visitsales" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@color/Light_gray"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_Pending_shipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="0" />

            <TextView
                android:id="@+id/textView54"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/pending_shipment" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@color/Light_gray"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_Not_valid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="0" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/Not_valid" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@color/Light_gray"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_Returns_and_Refunds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="0" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/Returns_and_Refunds" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@color/Light_gray"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_evaluate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="0" />

            <TextView
                android:id="@+id/textView57"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/evaluate" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

