<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!-- 標題 -->
    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingBottom="8dp" />

    <!-- 三個錢包功能 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="3">

        <!-- coin -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="6dp">

            <ImageView
                android:id="@+id/img_coin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/coin" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coin"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- ticket2 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="6dp">

            <ImageView
                android:id="@+id/img_ticket2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ticket2" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ticket2"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- wallet -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="6dp">

            <ImageView
                android:id="@+id/img_wallet"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/wallet" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/wallet"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
